@@ -2,6 +2,7 @@ package com.synergy.backend.global.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.ProviderManager;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
@@ -24,6 +25,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -36,13 +38,30 @@ public class SecurityConfig {
 	@Bean
 	public SecurityFilterChain securityFilterChain(HttpSecurity http, JwtAuthenticationFilter jwtAuthenticationFilter) throws Exception {
 		http
+			.cors(cors -> cors.configurationSource(corsConfigurationSource()))
 			.csrf(AbstractHttpConfigurer::disable)
 			.sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 			.authorizeHttpRequests(auth -> auth
-				.requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/swagger-ui.html", "/docs/**").permitAll()
-				.requestMatchers("/api/v1/auth/**").permitAll()
-				.requestMatchers("/api/v1/conference/**").permitAll()
-					.anyRequest().authenticated()
+					.requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/swagger-ui.html").permitAll()
+
+					// 컨퍼런스 관리자
+					.requestMatchers("/api/v1/conference/**", "/api/v1/admin/**",
+							"/api/v1/dashboard/**")
+					.hasRole("ADMIN")
+
+					// 참가자
+					.requestMatchers("/api/v1/attendee/onboarding/**", "/api/v1/attendee/my",
+							"/api/v1/attendee/liked-recruiters", "/api/v1/verify/**",
+							"/api/v1/points/**")
+					.hasRole("ATTENDEE")
+
+					// 채용담당자
+					.requestMatchers("/api/v1/recruiter/**").hasRole("RECRUITER")
+
+					// All
+					.requestMatchers(HttpMethod.GET, "/api/v1/conference/**").permitAll()
+					.requestMatchers("/api/v1/auth/**").permitAll()
+					.requestMatchers("/api/v1/attendee/**").authenticated()
 			)
 			.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
@@ -54,12 +73,14 @@ public class SecurityConfig {
 		CorsConfiguration configuration = new CorsConfiguration();
 
 		configuration.setAllowedOrigins(Arrays.asList(
-				"https://synergy-front-vert.vercel.app", // 프론트엔드 도메인 허용
-				"http://localhost:3000", // 로컬 프론트엔드 허용
-				"http://localhost:8080" // 로컬 백엔드 테스트 허용
+				"https://synergy-front-vert.vercel.app/", // 프론트엔드 도메인 허용
+				"http://localhost:3000/", // 로컬 프론트엔드 허용
+				"http://localhost:8080/", // 로컬 백엔드 테스트 허용
+				"http://localhost:5173/" // 로컬 백엔드 테스트 허용
 		));
+
 		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PATCH", "PUT", "DELETE", "OPTIONS"));
-		configuration.setAllowedHeaders(Arrays.asList("*"));
+		configuration.setAllowedHeaders(List.of("*"));
 		configuration.setAllowCredentials(true);
 
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -67,7 +88,6 @@ public class SecurityConfig {
 
 		return source;
 	}
-
 
 	@Bean
 	public AuthenticationManager authenticationManager() {
